--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -21,15 +21,19 @@ workflows:
                 PACKAGE_NAME: "com.exam.codemagic_hello_world_android"
 
         scripts:
-            - name: Set Android SDK location
+            - name: Set up local.properties
               script: | 
-                  echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/local.properties"
-            - name: Build Android release
+                echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+            - name: Get Flutter packages
               script: | 
-                  ./gradlew bundleRelease
-
+                flutter pub get
+            - name: Build AAB with Flutter
+              script: | 
+                flutter build appbundle --release
         artifacts:
-            - app/build/outputs/**/*.aab
+            - build/**/outputs/**/*.aab
+            - build/**/outputs/**/mapping.txt
+            - flutter_drive.log
 
         publishing:
             google_play:
